# deploy-langgraph-server-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_key_generator.py  auth_middleware.py  docker-compose.yml  langgraph-platform.json  langgraph.json  main.py  pyproject.toml  server_production.py  server_proxy.py
backend/: simple_youtube_comment_extractor.py  test_youtube_extractor.py  youtube_search_official.py
docs/: server-architecture.md
frontend/: chat_local.py  chat_remote.py  chat_remote_auth.py
frontend/api/: agent_server.py  agent_server_auth.py
frontend/web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/web/src/: App.tsx  styles.css
scripts/: api_key_generator.py
server/: __init__.py  app.py  config.py  health.py  langgraph_manager.py  proxy.py  server_proxy.py
server/middleware/: __init__.py  auth.py  cors.py
src/rocket/: graph.py  prompts.py
src/rocket/db/: db_setup.sql  server.py
src/rocket/my_mcp/: README.md  config.py  mcp_config.json  mcp_config_production.json  mcp_config_test.json
src/rocket/my_mcp/youtube/: __init__.py  server.py
src/rocket/prompts/: prompts.py  rocket_system_prompt.txt
src/rocket/utils/: __init__.py
